<resources>
    <string name="app_name">About CTSE</string>
    <string name="text_accounts">All Accounts</string>
    <string name="user_details">User Details</string>
    <string name="text_modules">All Modules</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello User,</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="add_record">Add</string>
    <string name="home">Home</string>
    <string name="view_all">View Modules</string>
    <string name="module_name">Module Name</string>
    <string name="module_description">Module Description</string>
    <string name="viewusers">View Users</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="edit_record">Edit</string>
    <string name="delete_record">Delete</string>
    <string name="insert_Module">Add Module</string>
    <string name="edit_Module">Edit Module</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>

</resources>
