<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <!--<item-->
        <!--android:id="@+id/add" android:icon="@android:drawable/ic_menu_add" app:showAsAction="always"   android:title="add"/>-->
    <item
        android:id="@+id/delete" android:icon="@android:drawable/ic_menu_delete" app:showAsAction="always|withText" android:title="@string/delete_record"/>

    <item
        android:id="@+id/edit" android:icon="@android:drawable/ic_menu_edit" app:showAsAction="always|withText" android:title="@string/edit_Module"/>

    <item
        android:id="@+id/add"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/add_Module"
        app:showAsAction="never"></item>

    <item
        android:id="@+id/view"  app:showAsAction="never" android:title="@string/view_all">
    </item>
    <item
        android:id="@+id/user_details" android:icon="@android:drawable/ic_dialog_info" app:showAsAction="never" android:title="@string/user_details">
    </item>
    <item
        android:id="@+id/logout"  app:showAsAction="never" android:title="@string/logout">
    </item>

</menu>