<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".activities.InsertModules">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"

            android:text="@string/edit_Module"
            android:textColor="?android:attr/textColor"
            android:textStyle="bold"
            android:textSize="18sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutModuleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/moduleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/module_name"
                android:inputType="text|textMultiLine"
                android:textColor="@color/colorText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutModuleDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/moduleDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/module_description"
                android:inputType="text|textMultiLine"
                android:textColor="@color/colorText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonUpdateContents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"

            android:padding="12dp"
            android:background="@color/colorTextHint"
            android:text="@string/update"
            android:textAlignment="center"
            android:textStyle="bold" />




    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>
